<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/messengerFragment"
        android:icon="@drawable/ic_bottom_messenger_button"
        android:orderInCategory="3"
        android:title="@string/bottom_messenger_button" />
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_bottom_home_button"
        android:orderInCategory="2"
        android:title="@string/bottom_home_button" />

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/bottom_settings_button"
        android:icon="@drawable/ic_bottom_settings_button"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_bottom_profie_button"
        android:orderInCategory="1"
        android:title="@string/bottom_profile_button" />

</menu>